welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: ')' expected but ';' found.
while(!estSurBiscuit(){recule() && nbPas=nbPas+1};
                                                 ^