welcome.lessons.welcome.variables.Variables.scala.code
var nbPas: Int=0
while(!estSurBiscuit(){recule() && nbPas=nbPas+1};
